
    o   In X11, locator() would sound the bell even if "xset b off"
        had been set.

    o	merge() could be confused by inconsistent use of as.character()
	giving leading spaces.

    o   [pqr]binom() no longer silently round the `size' argument,
	but return NaN (as dbinom() does). (PR#1377)

    o	Fixed socket writing code to block until all data is written.

    o	levels<-.factor() was using incorrectly list values longer than
	the number of levels (PR#1394), and incorrectly documented
	that a character value could not be longer than the existing
	levels.

    o   The pdf() device was running out of objects before the
	documented 500 page limit.  Now there is no limit.

    o   legend() did not deal correctly with `angle' arguments. (PR#1404)

    o   sum() tried to give an integer result for integer arguments, 
	but (PR#1408)
	- this was not documented
	- it sometimes warned on overflow, sometimes not
	- it was order-dependent for a mixture of integer and numeric args.

    o	mean() gave (numeric) NA if integer overflow occurred in sum(),
	but now always works with numeric (or complex) numbers.

    o	sort.list() and order() were treating NA_STRING as "NA".

    o	sort.list(na.last = NA) was not implemented.

    o	seq.default() was returning only one element for a relative
	range of less than about 1e-8, which was excessively conservative.


	**************************************************
	*						 *
	*	       1.4 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.4.1


BUG FIXES

    o	scan(multi.line = FALSE) now always gives an immediate error
	message if a line is incomplete. (As requested in PR#1210)

    o	read.table() is no longer very slow in processing comments:
	moved to C code and fewer lines checked.

    o	type.convert() could give stack imbalance warnings if used
	with as.is = TRUE.

    o	predict.mlm ignored newdata (PR#1226) and also offsets.
